<resources>
    <string name="app_name">Bike Fall Detection</string>
    <string name="sign_up_here">Create a new account? Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="login_here">Already have an account? Log In</string>
    <string name="dashboard">Dashboard</string>
    <string name="contacts">Contacts</string>
    <string name="control_center">Control Center</string>
    <string name="medical_care">Medical Care</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="person_name">Person name</string>
    <string name="person_phone_number">Person Phone Number</string>
</resources>